# django-changelogmd

./: .gitignore  LICENSE.md  MANIFEST.in  README.rst  setup.cfg
changelogmd/: apps.py  views.py
changelogmd/templates/changelogmd/: changelog.html
changelogmd/templatetags/: changelogmd.py
