[metadata]
name = django-changelogmd
version = 0.2
description = A Django app to implement rendering of Markdown-based CHANGELOG files
long_description = file: README.rst
url = https://www.liip.ch
author = Danick Fort
author_email = danick.fort@liip.ch
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 2.2
    Markdown <= 3.3.4